<resources>
    <string name="desctiptionText">Desctiption text</string>
    <string name="allDesc">..................</string>
    <string name="QRcode">Scan QR Code</string>
    <string name="enterCode">Enter code manually</string>
    <string name="app_name">My Application</string>
    <string name="enterCodedManually">Enter code manually</string>
    <string name="messageFirst">Message</string>
    <string name="AllowDevice">Allow multiply devices</string>
    <string name="buutonOK">OK</string>
    <string name="enterTokenCode">Enter your soft token code</string>
    <string name="messageSecond">Send your message again</string>
    <string name="error">Error</string>
    <string name="call">Call</string>
    <string name="oneTimePass">One time pass is : ---</string>
    <string name="authPinCode">Auth with pin code</string>
    <string name="decryptMessage">Decrypted message</string>
    <string name="auth">Auth</string>
    <string name="add">ADD</string>
    <string name="connected">Connected devices</string>
    <string name="del">Delete account</string>
    <string name="logOut">Log out</string>
    <string name="title_page6">Page6</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

