<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Decrypted6Activity"
    tools:showIn="@layout/activity_decrypted6">

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="61dp"
        android:text="@string/buutonOK"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="230dp"
        android:layout_height="143dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="77dp"

        android:background="@android:color/background_light"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="194dp"
        android:background="@android:color/background_light"

        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enterTokenCode" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="-32dp"

        android:background="@android:color/background_light"

        android:text="@string/desctiptionText"
        android:textColor="@android:color/black" />
    <!-- android:fontFamily="@font/bad_script" -->
</RelativeLayout>